@@ -22,7 +22,7 @@
 	{** Hidden selection storage **}
 	<select name="{$htmlName}" id="{$htmlId}-storage" multiple="multiple" style="display:none">
 		{foreach $value item}
-			<option value="{$item}" selected="seleted"></option>
+			<option value="{$item}"></option>
 		{/foreach}
 	</select>
 
